coeff is auto calculated

--- a/notebooks/file_name_vs_time_stamp_tiff.ipynb
+++ b/notebooks/file_name_vs_time_stamp_tiff.ipynb
@@ -208,7 +208,26 @@
    },
    "outputs": [],
    "source": [
-    "_coeff = 100\n",
+    "def get_raw_time_stamp(file = None):\n",
+    "    _dict = OrderedDict()\n",
+    "    i = Image.open(file)\n",
+    "    metadata = i.tag_v2.as_dict()\n",
+    "    acquisition_time = metadata[65000]\n",
+    "    acquisition_time = acquisition_time[0]\n",
+    "    return acquistion_time\n",
+    "\n",
+    "_coeff = 1\n",
+    "def caculate_best_coefficient():\n",
+    "    '''\n",
+    "    This algo takes the difference between the last and first times stamp, and\n",
+    "    return the closest power of 10 that is greater.\n",
+    "    '''\n",
+    "    time_begin = get_raw_time_stamp(file = list_tiff_files[0])\n",
+    "    time_end = get_raw_time_stamp(file = list_tiff_files[-1])\n",
+    "    delta_time = time_end - time_begin\n",
+    "    while _coeff < delta_time:\n",
+    "        _coeff *= 10\n",
+    "\n",
     "def keep_s_precision(time_s):\n",
     "    time_10s = time_s / _coeff\n",
     "    time_10s_int = int(time_10s)\n",
@@ -216,7 +235,7 @@
     "    delta_time_s = delta_time_10s * _coeff\n",
     "    return delta_time_s\n",
     "\n",
-    "def get_time_stamp(file, index_file = -1, time_zero = -1):\n",
+    "def get_dict_of_time_stamps(file, index_file = -1, time_zero = -1):\n",
     "    _dict = OrderedDict()\n",
     "    i = Image.open(file)\n",
     "    metadata = i.tag_v2.as_dict()\n",
@@ -240,12 +259,11 @@
     "file_dict = OrderedDict()\n",
     "time_zero = 0\n",
     "for _index, _file in enumerate(list_tiff_files):\n",
-    "    time_dictionary = get_time_stamp(_file, index_file = _index, time_zero = time_zero)\n",
+    "    time_dictionary = get_dict_of_time_stamps(_file, index_file = _index, time_zero = time_zero)\n",
     "    if _index == 0:\n",
     "        time_zero = time_dictionary['raw_time_stamp']\n",
     "    file_dict[_file] = time_dictionary\n",
-    "    w.value = _index\n",
-    "    "
+    "    w.value = _index"
    ]
   },
   {
