Changed the output format of file vs time stamp to be able to provide the information in second notbeook to do the fitting

--- a/notebooks/profiles_vs_image_index.ipynb
+++ b/notebooks/profiles_vs_image_index.ipynb
@@ -38,13 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import os, os.path"
+    "import os, os.path\n",
+    "import datetime"
    ]
   },
   {
@@ -683,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 83,
    "metadata": {
     "collapsed": true
    },
@@ -717,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 120,
    "metadata": {
     "collapsed": true
    },
@@ -728,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false
    },
@@ -742,62 +743,55 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>#FileName</th>\n",
-       "      <th>timeStamp(s)</th>\n",
-       "      <th>timeOffset(ms)</th>\n",
+       "      <th>timeStamp_s</th>\n",
+       "      <th>timeOffset_ms</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...</td>\n",
-       "      <td>1.474426e+09</td>\n",
+       "      <td>20160922_CO-4_Uptake_0000_0015.tiff</td>\n",
+       "      <td>1.474583e+09</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...</td>\n",
-       "      <td>1.474426e+09</td>\n",
-       "      <td>12.362003</td>\n",
+       "      <td>20160922_CO-4_Uptake_0000_0016.tiff</td>\n",
+       "      <td>1.474583e+09</td>\n",
+       "      <td>33.401489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...</td>\n",
-       "      <td>1.474426e+09</td>\n",
-       "      <td>24.492502</td>\n",
+       "      <td>20160922_CO-4_Uptake_0000_0017.tiff</td>\n",
+       "      <td>1.474583e+09</td>\n",
+       "      <td>66.128969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...</td>\n",
-       "      <td>1.474426e+09</td>\n",
-       "      <td>37.715673</td>\n",
+       "      <td>20160922_CO-4_Uptake_0000_0018.tiff</td>\n",
+       "      <td>1.474583e+09</td>\n",
+       "      <td>99.081278</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...</td>\n",
-       "      <td>1.474426e+09</td>\n",
-       "      <td>48.848152</td>\n",
+       "      <td>20160922_CO-4_Uptake_0000_0019.tiff</td>\n",
+       "      <td>1.474583e+09</td>\n",
+       "      <td>132.167816</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                           #FileName   timeStamp(s)  \\\n",
-       "0  /Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...   1.474426e+09   \n",
-       "1  /Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...   1.474426e+09   \n",
-       "2  /Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...   1.474426e+09   \n",
-       "3  /Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...   1.474426e+09   \n",
-       "4  /Volumes/My Book Thunderbolt Duo/IPTS/IPTS-162...   1.474426e+09   \n",
-       "\n",
-       "    timeOffset(ms)  \n",
-       "0         0.000000  \n",
-       "1        12.362003  \n",
-       "2        24.492502  \n",
-       "3        37.715673  \n",
-       "4        48.848152  "
+       "                             #FileName   timeStamp_s   timeOffset_ms\n",
+       "0  20160922_CO-4_Uptake_0000_0015.tiff  1.474583e+09        0.000000\n",
+       "1  20160922_CO-4_Uptake_0000_0016.tiff  1.474583e+09       33.401489\n",
+       "2  20160922_CO-4_Uptake_0000_0017.tiff  1.474583e+09       66.128969\n",
+       "3  20160922_CO-4_Uptake_0000_0018.tiff  1.474583e+09       99.081278\n",
+       "4  20160922_CO-4_Uptake_0000_0019.tiff  1.474583e+09      132.167816"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,37 +802,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-16259/Day_2_CO-11_uptake/20160920_CO-11-uptake_0000_0001.tiff'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_loc (pandas/index.c:4018)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/hashtable.pyx\u001b[0m in \u001b[0;36mpandas.hashtable.Int64HashTable.get_item (pandas/hashtable.c:6589)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: an integer is required",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-81-2ce96282e1a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# trying to locate a value knowing the name of file\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mFileNameColumn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'#FileName'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mrow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFileNameColumn\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-16259/Day_2_CO-11_uptake/20160920_CO-11-uptake_0000_0001.tiff'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/Users/j35/anaconda/envs/py35/lib/python3.5/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    581\u001b[0m         \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_apply_if_callable\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    582\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 583\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_value\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    584\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    585\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misscalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/j35/anaconda/envs/py35/lib/python3.5/site-packages/pandas/indexes/base.py\u001b[0m in \u001b[0;36mget_value\u001b[0;34m(self, series, key)\u001b[0m\n\u001b[1;32m   1978\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1979\u001b[0m             return self._engine.get_value(s, k,\n\u001b[0;32m-> 1980\u001b[0;31m                                           tz=getattr(series.dtype, 'tz', None))\n\u001b[0m\u001b[1;32m   1981\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1982\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minferred_type\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'integer'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'boolean'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_value (pandas/index.c:3332)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_value (pandas/index.c:3035)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mpandas/index.pyx\u001b[0m in \u001b[0;36mpandas.index.IndexEngine.get_loc (pandas/index.c:4084)\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: '/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-16259/Day_2_CO-11_uptake/20160920_CO-11-uptake_0000_0001.tiff'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1474582705.2265878\n"
      ]
     }
    ],
    "source": [
     "# trying to locate a value knowing the name of file\n",
     "FileNameColumn = df['#FileName']\n",
-    "row = FileNameColumn['/Volumes/My Book Thunderbolt Duo/IPTS/IPTS-16259/Day_2_CO-11_uptake/20160920_CO-11-uptake_0000_0001.tiff']\n"
+    "#print(FileNameColumn)\n",
+    "result = df.loc[df['#FileName'] == '20160922_CO-4_Uptake_0000_0015.tiff']\n",
+    "time_stamp = print(result.values[0][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "list_file_name = df['#FileName'].values\n",
+    "list_column = df.columns.values\n",
+    "list_time_stamp = df[list_column[1]].values"
    ]
   },
   {
@@ -852,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -865,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -883,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
@@ -896,17 +891,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 143,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "time_0 = list_time_stamp[first_image_index]\n",
+    "\n",
     "def create_ascii_contain(image_index):\n",
     "    ascii_contain = []\n",
     "    ascii_contain.append(\"#File display: {}\\n\".format(working_list_files[image_index]))\n",
     "    ascii_contain.append(\"#ROI selected (y0,x0,height,width):({},{},{},{})\\n\".format(y_top, x_left, height, width))\n",
     "    ascii_contain.append(\"#Rebin in y direction: {}\\n\".format(rebin))\n",
+    "    _time_stamp = list_time_stamp[image_index + first_image_index]\n",
+    "    _time_stamp_str = datetime.datetime.fromtimestamp(_time_stamp).strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "    ascii_contain.append(\"#Time stamp: {}\\n\".format(_time_stamp_str))\n",
+    "    ascii_contain.append(\"#Delta time (s): {}\\n\".format(delta_time))\n",
     "    ascii_contain.append(\"#\\n\")\n",
     "    ascii_contain.append(\"#pixel_index, counts\\n\")\n",
     "    for index, value in enumerate(profile_1d[image_index]):\n",
