Continue implementation of fitting

--- a/notebooks/profiles_vs_image_index.ipynb
+++ b/notebooks/profiles_vs_image_index.ipynb
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -910,7 +910,7 @@
     "    _delta_time = _time_stamp - time_0\n",
     "    ascii_contain.append(\"#Delta time (s): {}\\n\".format(_delta_time))\n",
     "    ascii_contain.append(\"#\\n\")\n",
-    "    ascii_contain.append(\"#pixel_index, counts\\n\")\n",
+    "    ascii_contain.append(\"#Label: pixel_index, counts\\n\")\n",
     "    for index, value in enumerate(profile_1d[image_index]):\n",
     "        ascii_contain.append(\"{}, {}\\n\".format(index, value))\n",
     "    return ascii_contain\n",
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 151,
    "metadata": {
     "collapsed": true
    },
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 152,
    "metadata": {
     "collapsed": true
    },
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 153,
    "metadata": {
     "collapsed": true
    },
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 154,
    "metadata": {
     "collapsed": false
    },
