--- a/notebooks/step1_profiles_vs_image_index.ipynb
+++ b/notebooks/step1_profiles_vs_image_index.ipynb
@@ -1225,9 +1225,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "imaging",
    "language": "python",
-   "name": "python3"
+   "name": "imaging"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1240,60 +1240,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "128af3e60bf34dbfaac341c450235dc0": {
-     "views": [
-      {
-       "cell_index": 37
-      }
-     ]
-    },
-    "73e0eb44e6c5477a9e0790b2797fa633": {
-     "views": [
-      {
-       "cell_index": 38
-      }
-     ]
-    },
-    "81ca1883eb764625bd2cad302910eb78": {
-     "views": [
-      {
-       "cell_index": 30
-      }
-     ]
-    },
-    "8abee950826247e3af617dfabb7e772f": {
-     "views": [
-      {
-       "cell_index": 20
-      }
-     ]
-    },
-    "e24efc0afda741b886e0aadd0a9e2e42": {
-     "views": [
-      {
-       "cell_index": 27
-      }
-     ]
-    },
-    "f44de3df705144058521324fac823e6a": {
-     "views": [
-      {
-       "cell_index": 10
-      }
-     ]
-    },
-    "fb1803fef296483bb28ea2e09e455ee5": {
-     "views": [
-      {
-       "cell_index": 14
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
