--- a/notebooks/step2_water_intake_time_calculation_algo2.ipynb
+++ b/notebooks/step2_water_intake_time_calculation_algo2.ipynb
@@ -475,9 +475,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "imaging",
    "language": "python",
-   "name": "python3"
+   "name": "imaging"
   },
   "language_info": {
    "codemirror_mode": {
@@ -490,18 +490,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.2"
-  },
-  "widgets": {
-   "state": {
-    "06ed9ac4433d469da7b7b5970a9a6c6a": {
-     "views": [
-      {
-       "cell_index": 11
-      }
-     ]
-    }
-   },
-   "version": "1.2.0"
   }
  },
  "nbformat": 4,
